# AutoQuest

./: .codedocs  .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/shaders/: frag.frag  text.frag  text.vert  vert.vert
aws/: CognitoClient.cpp  CognitoClient.hpp  CognitoServer.cpp  CognitoServer.hpp
external_includes/glad/include/glad/: glad.h
external_includes/glad/src/: glad.c
game/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  Font.cpp  Font.hpp  Game.cpp  Game.hpp  InputEvent.hpp  InputManager.cpp  InputManager.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ResourceManager.cpp  ResourceManager.hpp  Shapes.hpp  Text.cpp  Text.hpp
game/Utility/: CoordinateHelper.cpp  CoordinateHelper.hpp  HGTMesh.cpp  HGTMesh.hpp
game/components/: Animation.hpp  Clickable.hpp  Input.hpp  Renderable.hpp  Settings.hpp  Text.hpp  Texture.hpp  Transform.hpp
game/glpp/: GlmGLSLWrapper.hpp  RenderTarget.cpp  RenderTarget.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexBufferObject.cpp  VertexBufferObject.hpp
game/resource/: Font.cpp  Font.hpp  RenderTarget.cpp  RenderTarget.hpp  Shader.cpp  Shader.hpp
game/systems/: Camera.cpp  Camera.hpp  CameraSystem.cpp  CameraSystem.hpp  InputSystem.cpp  InputSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SceneSystem.cpp  SceneSystem.hpp  SettingsSystem.cpp  SettingsSystem.hpp  ShaderSystem.cpp  ShaderSystem.hpp
game/vk/: Shaders.cpp  Shaders.hpp  Vulkanize.cpp  Vulkanize.hpp
